Fix globe-container leaving gap when sidebar is opened

--- a/taisteal-globe/src/Globe.css
+++ b/taisteal-globe/src/Globe.css
@@ -1,7 +1,9 @@
 #globe-container {
-    width: 100%;
+    width: 200%;
     height: 100%;
+    left: -50%;
     position: relative;
+    background: radial-gradient(circle, #fff 0%, #c2fffa 30%, #77bfb9 70%);
 }
 
 #globe-canvas {
